Added Owetz in the name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/file/main.css">
-    <title>Daniel Ahl | Salesforce Consultant</title>
+    <title>Daniel Owetz Ahl | Salesforce Consultant</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <img src="/file/images/profile.jpg" class="profile" />
         </article>
         <article class="about">
-            <h1>Daniel Ahl</h1>
+            <h1>Daniel Owetz Ahl</h1>
             <h2>Salesforce Consultant</h2>
 
             <p>
